# Wallet-feita-finalmente

./: .env.local  Anchor.toml  Cargo.toml  DESIGN_SYSTEM.md  HELIUS_SETUP.md  NetworkSelector.tsx  PROMPT_TECNICO_ISOLAMENTO.md  PROMPT_TECNICO_LIBERACAO_AUTO.md  PROMPT_TECNICO_TESTES.md  PROMPT_TECNICO_VALIDACAO.md  PROMPT_TECNICO_VALIDACAO_ONCHAIN.md  README.md  SISTEMA_CONEXAO_SOLANA.md  accounts_dump.txt  all_accounts.txt  build_output.txt  check_accounts.js  check_offsets.js  check_v2.js  date-utils.ts  debug_all.js  debug_bode.js  debug_contract.js  debug_program.js  debug_times.js  dump_all.js  dump_raw.js  err.txt  file_list.txt  get_ids.js  hex_dump.txt  ids.txt  inspect_all.js  inspect_json.js  inspect_results.txt  install-solana.ps1  lint_output.txt  middleware.ts  next.config.ts  package-lock.json  (+11 more)
programs/verum_vesting/: Cargo.toml
programs/verum_vesting/src/: lib.rs
src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
src/components/: AddRecipientModal.tsx  AddressVerificationModal.tsx  CancelContractModal.tsx  ChangeRecipientModal.tsx  ClientLayout.tsx  ConnectWalletModal.tsx  DateTimePickerModal.tsx  EditRecipientModal.tsx  ExitWarningModal.tsx  NetworkSelector.tsx  ProofVerification.tsx  ReceiveTokenModal.tsx  RecipientSelectionDropdown.tsx  SendTokenModal.tsx  SplashScreen.tsx  TimeUnitDropdown.tsx  TokenDashboard.tsx  TokenDropdown.tsx  UnlockScheduleDropdown.tsx
src/contexts/: NetworkContext.tsx  WalletContext.tsx
src/contracts/: Vesting.sol.old  lib.rs
src/hooks/: useSolana.ts  useTokenMonitor.ts  (+1 more)
tests/: verum_vesting.ts
(+27 files in other folders)
